hardware/hhb_ip_repository/vivado_hls.log
================================================================
  Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
  Version: 2013.4
  Build date: Mon Dec 09 17:07:59 PM 2013
  Copyright (C) 2013 Xilinx Inc. All rights reserved.
================================================================
@I [LIC-101] Checked out feature [VIVADO_HLS]
@I [HLS-10] Running '/opt/Xilinx/2013.4/Vivado_HLS/2013.4/bin/unwrapped/lnx64.o/vivado_hls'
            for user 'sf306' on host 'ganymede' (Linux_x86_64 version 3.2.0-51-generic) on Sat Jul 26 17:48:09 BST 2014
            in directory '/home/sf306/phd_codebase/github/HeterogeneousHeartbeats/hardware/hhb_ip_repository'
@I [HLS-10] Opening project '/home/sf306/phd_codebase/github/HeterogeneousHeartbeats/hardware/hhb_ip_repository/cache_module'.
@W [HLS-40] No /home/sf306/phd_codebase/github/HeterogeneousHeartbeats/hardware/hhb_ip_repository/cache_module/cache_module/cache_module.aps file found.
@I [HLS-10] Adding design file 'cache_module/src/cache_module_top.cpp' to the project.
@I [HLS-10] Adding design file 'cache_module_top.cpp' to the project.
@I [HLS-10] Creating and opening solution '/home/sf306/phd_codebase/github/HeterogeneousHeartbeats/hardware/hhb_ip_repository/cache_module/cache_module'.
@I [HLS-10] Setting target device to 'xc7z020clg484-1'
@I [SYN-201] Setting up clock 'default' with a period of 10ns.
@W [HLS-40] Cannot find source file cache_module_top.cpp; skipping it.
@I [HLS-10] Analyzing design file 'cache_module/src/cache_module_top.cpp' ... 
@E [HLS-70] Compilation errors found:
cache_module/src/cache_module_top.cpp:15:1: warning: declaration does not declare anything [-Wmissing-declarations]
typedef struct cache_entry //Defines a signle entry of the application cache.
^~~~~~~
cache_module/src/cache_module_top.cpp:71:24: error: member reference base type 'int' is not a structure or union
        if(hb_cache[i].AppID == AppID)
           ~~~~~~~~~~~ ^
cache_module/src/cache_module_top.cpp:74:30: error: no viable overloaded '='
            temp_cache_entry = hb_cache[i];
            ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~
cache_module/src/cache_module_top.cpp:15:16: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'int' to 'const cache_entry' for 1st argument; 
typedef struct cache_entry //Defines a signle entry of the application cache.
               ^
1 warning and 2 errors generated.
Failed checking during preprocessing.
    while executing
"csynth_design"
    (file "/home/sf306/phd_codebase/github/HeterogeneousHeartbeats/hardware/hhb_ip_repository/cache_module/cache_module/script.tcl" line 15)
@I [LIC-101] Checked in feature [VIVADO_HLS]
